Fix win/lose screens: add CSS file, restructure HTML, update navigation

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,5 @@
 @import "screens/_load-game.css";
 @import "screens/_settings.css";
 @import "screens/_loading.css";
+@import "screens/_win-lose.css";
+
