--- a/css/components/_buttons.css
+++ b/css/components/_buttons.css
@@ -12,6 +12,10 @@
   font-size: var(--fs-lg);
   color: var(--stone-dark);
   font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 .menu-btn:hover {
   background-position: 50% 50.5%;
