--- a/css/screens/_win-lose.css
+++ b/css/screens/_win-lose.css
@@ -4,33 +4,28 @@
   height: 100vh;
   gap: 2rem;
 }
-
-.win-screen-container {
+.lose-screen-container , .win-screen-container {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("../../assets/images/frames/victory-screen.png");   
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh; 
   z-index: 0;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center ;
+  padding: var(--spacing-lg);  
 }
-
 .lose-screen-container {
-  position: absolute;
-  top: 0;
-  left: 0;
   background-image: url("../../assets/images/frames/game-over-screen.png");   
-  background-size: cover; 
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh; 
-  z-index: 0;
 }
-
+.win-screen-container {
+  background-image: url("../../assets/images/frames/victory-screen.png");   
+}
 .win-screen > *:not(.win-screen-container),
 .lose-screen > *:not(.lose-screen-container) {
   position: relative;
