fix gate sound - confirmation modal - main title - and change some styles in loading and settings screen

--- a/css/components/_gate.css
+++ b/css/components/_gate.css
@@ -1,4 +1,4 @@
-.gate-modal {
+.gate {
   position: fixed;
   top: 0;
   left: 0;
@@ -8,10 +8,11 @@
   z-index: 9998;
   pointer-events: none;
 }
-.gate-modal.active {
+.gate.active {
   pointer-events: all;
 }
-.left-gate, .right-gate {
+.left-gate,
+.right-gate {
   width: 50%;
   height: 100%;
   background-size: cover;
@@ -19,38 +20,54 @@
   background-repeat: no-repeat;
 }
 .left-gate {
-  background-image: url('../../assets/images/frames/gate-left.png');
+  background-image: url("../../assets/images/frames/gate-left.png");
   transform: translateX(-100%);
 }
 .right-gate {
-  background-image: url('../../assets/images/frames/gate-right.png');
+  background-image: url("../../assets/images/frames/gate-right.png");
   transform: translateX(100%);
 }
-.gate-modal.opening .left-gate {
-  animation: slideLeftOpen 1.5s  ease-out forwards;
+.gate.opening .left-gate {
+  animation: slideLeftOpen 1.7s ease-out forwards;
 }
-.gate-modal.opening .right-gate {
-  animation: slideRightOpen 1.5s  ease-out forwards;
+.gate.opening .right-gate {
+  animation: slideRightOpen 1.7s ease-out forwards;
 }
-.gate-modal.closing .left-gate {
-  animation: slideLeftClose 1.5s 0.3s ease-in forwards;
+.gate.closing .left-gate {
+  animation: slideLeftClose 1.7s ease-in forwards;
 }
-.gate-modal.closing .right-gate {
-  animation: slideRightClose 1.5s 0.3s ease-in forwards;
+.gate.closing .right-gate {
+  animation: slideRightClose 1.7s ease-in forwards;
 }
 @keyframes slideLeftOpen {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100%); }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 @keyframes slideRightOpen {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(100%); }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
 @keyframes slideLeftClose {
-  0% { transform: translateX(-100%); }
-  100% { transform: translateX(0); }
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 @keyframes slideRightClose {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(0); }
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
