--- a/css/screens/_win-lose.css
+++ b/css/screens/_win-lose.css
@@ -1,33 +1,16 @@
-.win-screen, .lose-screen {
-  position: relative;
+.lose-screen.active,
+.win-screen.active {
   width: 100%;
   height: 100vh;
-  gap: 2rem;
-}
-.lose-screen-container , .win-screen-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: cover; 
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh; 
-  z-index: 0;
-  display:flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center ;
-  padding: var(--spacing-lg);  
 }
-.lose-screen-container {
-  background-image: url("../../assets/images/frames/game-over-screen.png");   
+.lose-screen {
+  background-image: url("../../assets/images/frames/game-over-screen.png");
 }
-.win-screen-container {
-  background-image: url("../../assets/images/frames/victory-screen.png");   
-}
-.win-screen > *:not(.win-screen-container),
-.lose-screen > *:not(.lose-screen-container) {
-  position: relative;
-  z-index: 1;
+.win-screen {
+  background-image: url("../../assets/images/frames/victory-screen.png");
 }
