--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "components/_buttons.css";
 @import "components/_modal.css";
 @import "components/_gate.css";
+@import "components/_main-title.css";
 @import "components/_hud.css";
 @import "screens/_home.css";
 @import "screens/_game.css";
@@ -11,4 +12,3 @@
 @import "screens/_settings.css";
 @import "screens/_loading.css";
 @import "screens/_win-lose.css";
-
