--- a/css/screens/_settings.css
+++ b/css/screens/_settings.css
@@ -1,4 +1,4 @@
-.screen.settings {
+.settings {
   background-image: url("../../assets/images/frames/home.png");
   background-size: cover;
   background-position: center;
